# LazyFileGenerator

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: arch.cmake
src/: CMakeLists.txt  main.cpp
src/config/: EnvConfigProvider.cpp  EnvConfigProvider.hpp  IConfigProfider.hpp
src/context/: Context.cpp  Context.hpp  IContext.hpp  IParameter.hpp  SystemParametersPriority.hpp
src/context/parameters/: EnvParameter.cpp  EnvParameter.hpp  IParameter.hpp  ParameterType.hpp
src/context/providers/: EnvParameterProvider.cpp  EnvParameterProvider.hpp  IParameterProvider.hpp
src/converter/: IConverter.hpp
src/generator/: Generator.cpp  Generator.hpp  IGenerator.hpp
src/generator/action/: ContextAction.cpp  ContextAction.hpp  CustomAction.cpp  CustomAction.hpp  IAction.hpp  TextAction.cpp  TextAction.hpp
src/helper/couroutines/: Generator.hpp
src/io/: Buffer.hpp  IOFactory.cpp  IOFactory.hpp  IOTypes.hpp  IReader.hpp  IWriter.hpp  ReaderFactory.cpp  ReaderFactory.hpp  ReaderStd.cpp  ReaderStd.hpp  ReaderType.hpp  WriterStd.cpp  WriterStd.hpp
src/options/: Options.cpp  Options.hpp
src/parser/: IParser.hpp  ParserAutoconfLike.cpp  ParserAutoconfLike.hpp  ParserFactory.cpp  ParserFactory.hpp  ParserSyntax.hpp
src/run/: IRunner.hpp  RunMode.hpp  RunnerFactory.cpp  RunnerFactory.hpp  RunnerGenerate.cpp  RunnerGenerate.hpp
src/source/: ISource.hpp  Source.cpp  Source.hpp  SourceIterator.cpp  SourceIterator.hpp
src/source/container/: SourceContainerBase.cpp  SourceContainerBase.hpp  SourceVectorContainer.cpp  SourceVectorContainer.hpp
(+7 files in other folders)
